chore: move handleSortAttributes into TrackedEntityQueryParams
similar to EventSearchParams. It should be hard to misuse TrackedEntityQueryParams. Users
of it should not have to remember to add the order tea into attributes with
all the conditions of when to do it